--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
+/* Import Google font - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
 :root {
   --text-color: #ffffff;
   --icon-color: #acacbe;
   --icon-hover-bg: #5b5e71;
-  --placeholder-color: #cccccc;
+  --placeholder-color: #dcdcdc;
   --outgoing-chat-bg: #343541;
   --incoming-chat-bg: #444654;
   --outgoing-chat-border: #343541;
@@ -12,22 +20,49 @@
   --text-color: #343541;
   --icon-color: #a9a9bc;
   --icon-hover-bg: #f1f1f3;
-  --placeholder-color: #9f9f9f9f;
+  --placeholder-color: #6c6c6c;
   --outgoing-chat-bg: #ffffff;
   --incoming-chat-bg: #f7f7f8;
   --outgoing-chat-border: #ffffff;
   --incoming-chat-border: #d9d9e3;
 }
-
 body {
-  background-color: var(--outgoing-chat-bg);
+  background: var(--outgoing-chat-bg);
 }
 
-.chat-details img {
-  width: 35px;
-  height: 35px;
-  object-fit: cover;
-  border-radius: 2px;
+/* Chats container styling */
+.chat-container {
+  overflow-y: auto;
+  max-height: 100vh;
+  padding-bottom: 150px;
+}
+:where(.chat-container, textarea)::-webkit-scrollbar {
+  width: 6px;
+}
+:where(.chat-container, textarea)::-webkit-scrollbar-track {
+  background: var(--incoming-chat-bg);
+  border-radius: 25px;
+}
+:where(.chat-container, textarea)::-webkit-scrollbar-thumb {
+  background: var(--icon-color);
+  border-radius: 25px;
+}
+.default-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 70vh;
+  padding: 0 10px;
+  text-align: center;
+  color: var(--text-color);
+}
+.default-text h1 {
+  font-size: 3.3rem;
+}
+.default-text p {
+  margin-top: 10px;
+  font-size: 1.1rem;
 }
 .chat-container .chat {
   padding: 25px 10px;
@@ -35,72 +70,77 @@ body {
   justify-content: center;
   color: var(--text-color);
 }
-.chat-container {
-  max-height: 100vh;
-  padding-bottom: 150px;
-  overflow-y: auto;
-}
 .chat-container .chat.outgoing {
-  background-color: var(--outgoing-chat-bg);
+  background: var(--outgoing-chat-bg);
   border: 1px solid var(--outgoing-chat-border);
 }
 .chat-container .chat.incoming {
-  background-color: var(--incoming-chat-bg);
+  background: var(--incoming-chat-bg);
   border: 1px solid var(--incoming-chat-border);
 }
-
-.chat-details p {
-  color: var(--text-color);
-  padding: 0 50px 0 25px;
+.chat .chat-content {
+  display: flex;
+  max-width: 1200px;
+  width: 100%;
+  align-items: flex-start;
+  justify-content: space-between;
 }
-
+span.material-symbols-rounded {
+  user-select: none;
+  cursor: pointer;
+}
+.chat .chat-content span {
+  cursor: pointer;
+  font-size: 1.3rem;
+  color: var(--icon-color);
+  visibility: hidden;
+}
+.chat:hover .chat-content:not(:has(.typing-animation), :has(.error)) span {
+  visibility: visible;
+}
 .chat .chat-details {
   display: flex;
   align-items: center;
 }
-.chat .chat-content {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  max-width: 1200px;
-  width: 100%;
+.chat .chat-details img {
+  width: 35px;
+  height: 35px;
+  align-self: flex-start;
+  object-fit: cover;
+  border-radius: 2px;
 }
-
-.chat .chat-content span {
-  font-size: 1.3rem;
-  color: var(--icon-color);
-  padding-top: 30px;
-  visibility: hidden;
+.chat .chat-details p {
+  white-space: pre-wrap;
+  font-size: 1.05rem;
+  padding: 0 50px 0 25px;
+  color: var(--text-color);
+  word-break: break-word;
 }
-.chat:hover .chat-content span {
-  visibility: visible;
+.chat .chat-details p.error {
+  color: #e55865;
 }
-.span.material-symbols-rounded {
-  user-select: none;
-  cursor: pointer;
-}
-
-.typing-animation {
+.chat .typing-animation {
+  padding-left: 25px;
   display: inline-flex;
-  margin-left: 30px;
 }
-
 .typing-animation .typing-dot {
   height: 7px;
   width: 7px;
-  background-color: var(--text-color);
-  opacity: 0.7;
   border-radius: 50%;
   margin: 0 3px;
+  opacity: 0.7;
+  background: var(--text-color);
   animation: animateDots 1.5s var(--delay) ease-in-out infinite;
 }
-
+.typing-animation .typing-dot:first-child {
+  margin-left: 0;
+}
 @keyframes animateDots {
   0%,
   44% {
     transform: translateY(0px);
   }
-  22% {
+  28% {
     opacity: 0.4;
     transform: translateY(-6px);
   }
@@ -109,42 +149,54 @@ body {
   }
 }
 
+/* Typing container styling */
 .typing-container {
   position: fixed;
   bottom: 0;
   width: 100%;
-  padding: 20px 10px;
-  background: var(--outgoing-chat-bg);
-  border: 1px solid var(--incoming-chat-border);
   display: flex;
+  padding: 20px 10px;
   justify-content: center;
+  background: var(--outgoing-chat-bg);
+  border-top: 1px solid var(--incoming-chat-border);
 }
 .typing-container .typing-content {
+  display: flex;
   max-width: 950px;
   width: 100%;
-
-  display: flex;
   align-items: flex-end;
 }
-.typing-content .typing-textarea {
+.typing-container .typing-textarea {
   width: 100%;
   display: flex;
   position: relative;
 }
 .typing-textarea textarea {
-  width: 100%;
-  height: 55px;
-  background: var(--incoming-chat-bg);
   resize: none;
+  height: 55px;
+  width: 100%;
+  border: none;
+  padding: 15px 45px 15px 20px;
   color: var(--text-color);
   font-size: 1rem;
-  padding: 15px 45px 15px 20px;
+  border-radius: 40px;
+  max-height: 250px;
+  overflow-y: auto;
+  background: var(--incoming-chat-bg);
+  outline: 1px solid var(--incoming-chat-border);
 }
 .typing-textarea textarea::placeholder {
   color: var(--placeholder-color);
 }
-.typing-textarea textarea:valid ~ span {
-  visibility: visible;
+.typing-content span {
+  width: 55px;
+  height: 55px;
+  display: flex;
+  border-radius: 4px;
+  font-size: 1.35rem;
+  align-items: center;
+  justify-content: center;
+  color: var(--icon-color);
 }
 .typing-textarea span {
   position: absolute;
@@ -152,40 +204,56 @@ body {
   bottom: 0;
   visibility: hidden;
 }
-
-.typing-content span {
-  width: 55px;
-  height: 55px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--icon-color);
+.typing-textarea textarea:valid ~ span {
+  visibility: visible;
 }
-
 .typing-controls {
   display: flex;
 }
 .typing-controls span {
-  background: var(--incoming-chat-bg);
-  border: 1px solid var(--incoming-chat-border);
   margin-left: 7px;
   font-size: 1.4rem;
+  background: var(--incoming-chat-bg);
+  outline: 1px solid var(--incoming-chat-border);
+}
+.typing-controls span:hover {
+  background: var(--icon-hover-bg);
 }
 
-@media screen and (max-width: 500px) {
-  .typing-content span {
-    width: 55px;
-    height: 55px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--icon-color);
+/* Reponsive Media Query */
+@media screen and (max-width: 600px) {
+  .default-text h1 {
+    font-size: 2.3rem;
   }
-
-  .typing-container .typing-content {
-    max-width: 80%;
-    width: 100%;
-    display: flex;
-    align-items: flex-end;
+  :where(.default-text p, textarea, .chat p) {
+    font-size: 0.95rem !important;
+  }
+  .chat-container .chat {
+    padding: 20px 10px;
+  }
+  .chat-container .chat img {
+    height: 32px;
+    width: 32px;
+  }
+  .chat-container .chat p {
+    padding: 0 20px;
+  }
+  .chat .chat-content:not(:has(.typing-animation), :has(.error)) span {
+    visibility: visible;
+  }
+  .typing-container {
+    padding: 15px 10px;
+  }
+  .typing-textarea textarea {
+    height: 45px;
+    padding: 10px 40px 10px 10px;
+  }
+  .typing-content span {
+    height: 45px;
+    width: 45px;
+    margin-left: 5px;
+  }
+  span.material-symbols-rounded {
+    font-size: 1.25rem !important;
   }
 }
